tests/N3Tests/jen3_syntax/pos/prefix1-ref.n3
<http://example1.org/hello> <http://example1.org/at> <http://example1.org/world> .
<http://example2.org/hello> <http://example2.org/at> <http://example2.org/world> .