tests/N3Tests/jen3_syntax/neg/iri3.n3
@prefix : <iri1.n3#>.
@base <http://example.org/> .

:s <= p> :o.